# muni-sign

./: .editorconfig  .gitignore  .travis.yml  BUILD  LICENSE  Makefile  README.md  WORKSPACE
Godeps/: Godeps.json
admin/: BUILD  BUILD.bazel  Makefile  server.go  server_test.go
admin/config/: BUILD  BUILD.bazel  config.go  config_test.go  file.go  file_test.go
admin/public/css/: styles.css
admin/templates/: home.html  index.html
display/: BUILD  fake_display_driver.py
driver/: BUILD  Makefile  driver.go
nextbus/: .gitignore  BUILD  BUILD.bazel  Makefile  nextbus.go  nextbus_test.go
proto/: BUILD  BUILD.bazel  Makefile  muni_sign.proto
