load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "file.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//proto:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["file_test.go"],
    library = ":go_default_library",
    deps = [
        "//proto:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
    ],
)
